Added an example of the mesh sampler and some description to the mesh_scan documentation

--- a/examples/python_aposmm_example/README
+++ b/examples/python_aposmm_example/README
@@ -1,6 +1,16 @@
+This directory has two examples. One for a global optimizer setup and one for a parameter scan.
+
+config_six_hump_camel.yaml:
 Example of running a global optimizer through rsopt. Uses the optimization algorith APOSMM [1] through libEnsemble.
 Runs 4 workers on the six-hump camel problem and should find 4 of the 6 global minima.
 
 To run in a terminal: rsopt optimize configuration config_six_hum_camel.yaml
+
+
+config_scan_six_hump_camel.yaml:
+Example of a parameter scan on a uniform mesh. The number of samples is specified with the `samples` field under each
+parameter. For N parameters and M samples this will result in a total of N*M points evaluated.
+
+To run in a terminal: rsopt sample configuration config_scan_six_hump_camel.yaml
 
 [1] https://doi.org/10.1007/s12532-017-0131-4
