Documentation and example text fixes

--- a/examples/python_aposmm_example/README
+++ b/examples/python_aposmm_example/README
@@ -4,7 +4,7 @@ config_six_hump_camel.yaml:
 Example of running a global optimizer through rsopt. Uses the optimization algorith APOSMM [1] through libEnsemble.
 Runs 4 workers on the six-hump camel problem and should find 4 of the 6 global minima.
 
-To run in a terminal: rsopt optimize configuration config_six_hum_camel.yaml
+To run in a terminal: rsopt optimize configuration config_six_hump_camel.yaml
 
 
 config_scan_six_hump_camel.yaml:
