adding osy example notes and comments

--- a/examples/mobo_example/README
+++ b/examples/mobo_example/README
@@ -1,5 +1,9 @@
 Testing libEnsemble generator for the Multi-Objective Bayesian approach implemented by https://github.com/ChristopherMayes/Xopt
-To run: rsopt optimize configuration config_mobo.yml
 
+1st example, the TNK function:
+To run: rsopt optimize configuration config_mobo.yml
 Plotting script: python plot_result.py
 (may need to change the name of `history_file` in plot_result.py)
+
+2nd example, the OSY function - implemented from PYMOO. This example uses GPU execution for the MOBO model by default.
+To run: rsopt optimize configuration config_mobo_osy.yml
